# advanced_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cmake/: settings.json
homeworks/: CMakeLists.txt  README.md
homeworks/task_1/: README.md  group.cpp  group.hpp  main.cpp  manager.cpp  manager.hpp  user.cpp  user.hpp
homeworks/task_2/: README.md  main.cpp  type_list.hpp
homeworks/task_3/: README.md  main.cpp  type_list.hpp  type_map.hpp
homeworks/task_4/: README.md  counter.hpp  less_than_comparable.hpp  main.cpp
homeworks/task_5/: README.md  logger.hpp  main.cpp  singleton.hpp
homeworks/task_6/: README.md  builder.hpp  main.cpp
homeworks/task_7/: README.md  main.cpp  variety.hpp
homeworks/task_8/: README.md  main.cpp  math_factory.cpp  math_factory.hpp
homeworks/task_8/math/: constant.hpp  expression.hpp  operators.hpp  variable.hpp
homeworks/task_8/math/operators/: add_operator.hpp  divide_operator.hpp  multiply_operator.hpp  operator.hpp  substract_operator.hpp
lesson_1/: CMakeLists.txt  README.md
lesson_1/example_shape_lib/: main.cpp
lesson_1/example_shape_lib/shape_lib/: CMakeLists.txt  circle.cpp  shape.hpp
lesson_10/: README.md
lesson_2/: README.md
lesson_2/example_interface/: main.cpp
lesson_3/example_unique_ptr/: main.cpp  unique_ptr.hpp
lesson_4/example_reference_and_overloading/: main.cpp
lesson_5/: README.md
lesson_5/example_auto/: main.cpp
lesson_6/example_sfinae/: main.cpp
lesson_7/: README.md
lesson_7/example_sfinae/: main.cpp
lesson_8/: README.md
lesson_8/example_sfinae/: main.cpp
lesson_9/: README.md
lesson_9/example_crtp/: main.cpp
lesson_template/: CMakeLists.txt
lessons/lesson_1/: CMakeLists.txt
lessons/lesson_1/example_shape_lib/: main.cpp
lessons/lesson_1/example_shape_lib/shape_lib/: CMakeLists.txt  circle.hpp  rectangle.cpp  rectangle.hpp  triangle.cpp  triangle.hpp
lessons/lesson_10/example_concepts/: main.cpp
lessons/lesson_11/: README.md
lessons/lesson_12/: README.md
lessons/lesson_12/example_crtp_advanced/: main.cpp
lessons/lesson_2/example_interface/: main.cpp  my_class.hpp
lessons/lesson_3/: README.md
lessons/lesson_4/: README.md
lessons/lesson_4/example_reference_and_overloading/: main.cpp  other.cpp
lessons/lesson_6/: README.md
lessons/lesson_6/example_sfinae/: main.cpp
lessons/lesson_7/: README.md
lessons/lesson_7/example_sfinae/: main.cpp
lessons/lesson_8/example_factorial/: main.cpp
lessons/lesson_8/example_sfinae/: main.cpp
lessons/lesson_9/example_crtp/: main.cpp
lessons/lesson_template/: CMakeLists.txt
lib/: CMakeLists.txt  utils.hpp
theory/: README.md
